# blog-os

./: Cargo.toml  run_on_qemu.sh  run_on_qemu_w_ser.sh
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
